package warehouse_management;

public class Employee {
    
}
