package warehouse_management;

public class InventoryItem {
    
}
