package warehouse_management;

public class Product {

}
