package warehouse_management;

public class Shipment {
    
}
