package warehouse_management;

public class Supplier {

}
